# codexsmTui

./: Cargo.toml  README.md  RELEASING.md  RELEASING.zh-CN.md
.github/workflows/: release.yml
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Formula/: codexsmtui.rb
scripts/: update-homebrew-formula.sh
src/: main.rs
src/codex/: mod.rs  parser.rs  scanner.rs  session.rs  trash.rs
src/tui/: app.rs  detail.rs  events.rs  mod.rs  styles.rs  ui.rs
