[package]
name = "codexsmtui"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A ratatui-based TUI for managing local OpenAI Codex CLI sessions"
repository = "https://github.com/life2you/codexsmTui"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
walkdir = "2.5"

[[bin]]
name = "codexsmTui"
path = "src/main.rs"
